Add GitHub OAuth

--- a/app/views/dashboard/splash.html.erb
+++ b/app/views/dashboard/splash.html.erb
@@ -3,7 +3,7 @@
     <h1>ClaHub</h1>
     <h2>Contributor License Agreements on GitHub</h2>
     <p>Easily add a <a href="en.wikipedia.org/wiki/Contributor_License_Agreement">Contributor License Agreement</a> to your GitHub project, let contributors sign it, and see at a glance which pull requests are by CLA-signing contributors, and which aren&rsquo;t.</p>
-    <p><a class="btn btn-primary btn-large">Learn more &raquo;</a></p>
+    <p><a class="btn btn-primary btn-large" href="/auth/github">Sign in with GitHub to get started &raquo;</a></p>
   </div>
 
   <hr>
