Added User, sign_in/sign_out

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,7 +8,14 @@
 </head>
 <body>
 
+<%= render partial: 'shared/flashes' %>
 <%= yield %>
+
+<% if signed_in? %>
+  <section>
+    <a href="/sign_out">Sign Out</a>
+  </section>
+<% end %>
 
 </body>
 </html>
