--- a/app/views/licenses/show.html.erb
+++ b/app/views/licenses/show.html.erb
@@ -3,14 +3,14 @@
 <p><%= @license.text %></p>
 
 <% if signed_in? %>
-  <%= link_to 'I agree', license_agreement_path(user_name: @license.user_name, repo_name: @license.repo_name), method: :post %>
+  <%= link_to 'I agree', license_signature_path(user_name: @license.user_name, repo_name: @license.repo_name), method: :post %>
 <% else %>
   <p><a class="btn btn-primary btn-large" href="/auth/github">Sign in with GitHub to agree to this CLA &raquo;</a></p>
 <% end %>
 
-<h2>Users who have agreed to the CLA</h2>
+<h2>Users who have signed the CLA</h2>
 <ul>
-<% @license.agreeing_users.each do |user| %>
+<% @license.signing_users.each do |user| %>
   <li><%= user.nickname %></li>
 <% end %>
 </ul>
