--- a/app/views/agreements/show.html.erb
+++ b/app/views/agreements/show.html.erb
@@ -8,9 +8,13 @@
   <p><a class="btn btn-primary btn-large" href="/auth/github">Sign in with GitHub to agree to this CLA &raquo;</a></p>
 <% end %>
 
-<h2>Users who have signed the CLA</h2>
-<ul>
-<% @agreement.signing_users.each do |user| %>
-  <li><%= user.nickname %></li>
+<% if @agreement.owned_by?(current_user) %>
+  <h2>Users who have signed the CLA</h2>
+  <ul>
+  <% @agreement.signing_users.each do |user| %>
+    <li><%= user.nickname %></li>
+  <% end %>
+  </ul>
+<% elsif @agreement.signed_by?(current_user) %>
+  <p>You have signed this CLA.</p>
 <% end %>
-</ul>
