--- a/app/views/agreements/show.html.erb
+++ b/app/views/agreements/show.html.erb
@@ -3,7 +3,11 @@
 <p><%= @agreement.text %></p>
 
 <% if signed_in? %>
-  <%= link_to 'I agree', agreement_signature_path(user_name: @agreement.user_name, repo_name: @agreement.repo_name), method: :post %>
+  <% if @agreement.signed_by?(current_user) %>
+    <p>You have signed this CLA.</p>
+  <% else %>
+    <%= link_to 'I agree', agreement_signature_path(user_name: @agreement.user_name, repo_name: @agreement.repo_name), method: :post %>
+  <% end %>
 <% else %>
   <p><a class="btn btn-primary btn-large" href="/auth/github">Sign in with GitHub to agree to this CLA &raquo;</a></p>
 <% end %>
@@ -15,6 +19,4 @@
     <li><%= user.nickname %></li>
   <% end %>
   </ul>
-<% elsif @agreement.signed_by?(current_user) %>
-  <p>You have signed this CLA.</p>
 <% end %>
