--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -9,3 +9,22 @@ body {
   padding-bottom: 40px;
 }
 
+
+div#how-it-works.carousel {
+  @extend .span8;
+  margin-left: auto;
+  margin-right: auto;
+
+  h2 {
+    margin-left: auto;
+    margin-right: auto;
+  }
+
+  div.item {
+    height: 300px;
+
+    img {
+      @extend .img-rounded;
+    }
+  }
+}
