--- a/app/views/dashboard/show.html.erb
+++ b/app/views/dashboard/show.html.erb
@@ -4,3 +4,7 @@
   <p>Easily add a <a href="en.wikipedia.org/wiki/Contributor_License_Agreement">Contributor License Agreement</a> to your GitHub project, let contributors sign it, and see at a glance which pull requests are by CLA-signing contributors, and which aren&rsquo;t.</p>
   <p><a class="btn btn-primary btn-large" href="/auth/github">Sign in with GitHub to get started &raquo;</a></p>
 </div>
+
+<!--
+  <%= render partial: 'how_it_works' %>
+-->
