--- a/app/views/agreements/show.html.erb
+++ b/app/views/agreements/show.html.erb
@@ -1,22 +1,30 @@
-<h1>Agreement for <%= @agreement.user_name %>/<%= @agreement.repo_name %></h1>
+<header>
+  <h1>
+    Agreement for
+    <%= @agreement.user_name %>/<%= @agreement.repo_name %></h1>
+</header>
 
-<p><%= @agreement.text %></p>
+<div class="row">
+  <div id="agreement-text"><%= @agreement.text %></div>
+</div>
 
-<% if signed_in? %>
-  <% if @agreement.signed_by?(current_user) %>
-    <p>You have signed this CLA.</p>
+<div class="row">
+  <% if signed_in? %>
+    <% if @agreement.signed_by?(current_user) %>
+      <p>You have signed this CLA.</p>
+    <% else %>
+      <%= link_to 'I agree',
+                  agreement_signature_path(
+                    user_name: @agreement.user_name,
+                    repo_name: @agreement.repo_name),
+                  id: "agree-link",
+                  method: :post %>
+    <% end %>
   <% else %>
-    <%= link_to 'I agree', agreement_signature_path(user_name: @agreement.user_name, repo_name: @agreement.repo_name), method: :post %>
+    <a id="agree-link" href="/auth/github">Sign in with GitHub to agree to this CLA &raquo;</a>
   <% end %>
-<% else %>
-  <p><a class="btn btn-primary btn-large" href="/auth/github">Sign in with GitHub to agree to this CLA &raquo;</a></p>
-<% end %>
+</div>
 
 <% if @agreement.owned_by?(current_user) %>
-  <h2>Users who have signed the CLA</h2>
-  <ul>
-  <% @agreement.signing_users.each do |user| %>
-    <li><%= user.nickname %></li>
-  <% end %>
-  </ul>
+  <%= render partial: 'agreements/signing_users' %>
 <% end %>
