--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -7,8 +7,11 @@ body {
 }
 
 
+div#how-it-works {
+  margin-top: 75px;
+}
+
 div#how-it-works.carousel {
-  @extend .span8;
   margin-left: auto;
   margin-right: auto;
 
@@ -18,7 +21,7 @@ div#how-it-works.carousel {
   }
 
   div.item {
-    height: 300px;
+    height: 800px;
 
     img {
       @extend .img-rounded;
