--- a/app/views/dashboard/_how_it_works.html.erb
+++ b/app/views/dashboard/_how_it_works.html.erb
@@ -1,36 +1,27 @@
 <div id="how-it-works" class="carousel slide">
-  <h2>How does it work?  Four easy steps:</h2>
+  <%
+    steps = [
+      'Sign in with GitHub and create an agreement for your project.',
+      'Add a link to your CONTRIBUTING file.',
+      'A new pull request is marked as needing a CLA signature.',
+      'The contributor signs in with GitHub and signs your agreement.',
+      'The contributor signs in with GitHub and signs your agreement.',
+      'Done!  The pull request is automatically marked ready for merge.'
+    ]
+  %>
+  <h2>How does it work?  Just a few easy steps:</h2>
   <div class="carousel-inner">
-    <div class="item active">
-      <img src="/images/bootstrap-mdo-sfmoma-01.jpg" alt="" class="img-rounded">
-      <div class="carousel-caption">
-        <h4>First Thumbnail label</h4>
-        <p>Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec id elit non mi porta gravida at eget metus. Nullam id dolor id nibh ultricies vehicula ut id elit.</p>
+    <% steps.each_with_index do |step, index| %>
+      <div class="item <%= 'active' if index == 0 %>">
+        <%= image_tag "how-it-works/#{ index + 1}.png" %>
+        <div class="carousel-caption">
+          <h4>Step <%= index + 1%></h4>
+          <p><%= step %></p>
+        </div>
       </div>
-    </div>
-    <div class="item">
-      <img src="/images/bootstrap-mdo-sfmoma-02.jpg" alt="">
-      <h3>then another thign</h3>
-      <div class="carousel-caption">
-        <h4>Second Thumbnail label</h4>
-        <p>Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec id elit non mi porta gravida at eget metus. Nullam id dolor id nibh ultricies vehicula ut id elit.</p>
-      </div>
-    </div>
-    <div class="item">
-      <img src="/images/bootstrap-mdo-sfmoma-03.jpg" alt="">
-      <div class="carousel-caption">
-        <h4>Third Thumbnail label</h4>
-        <p>Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec id elit non mi porta gravida at eget metus. Nullam id dolor id nibh ultricies vehicula ut id elit.</p>
-      </div>
-    </div>
-    <div class="item">
-      <img src="/images/bootstrap-mdo-sfmoma-04.jpg" alt="">
-      <div class="carousel-caption">
-        <h4>Fourth Thumbnail label</h4>
-        <p>Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec id elit non mi porta gravida at eget metus. Nullam id dolor id nibh ultricies vehicula ut id elit.</p>
-      </div>
-    </div>
+    <% end %>
   </div>
+
   <a class="left carousel-control" href="#how-it-works" data-slide="prev">‹</a>
   <a class="right carousel-control" href="#how-it-works" data-slide="next">›</a>
 </div>
@@ -40,7 +31,7 @@
     //<![CDATA[
       $(function() {
         $('.carousel').carousel({
-          interval: 4000
+          interval: 5000
         });
       });
     //]]>
