--- a/app/views/dashboard/show.html.erb
+++ b/app/views/dashboard/show.html.erb
@@ -1,8 +1,8 @@
 <div class="hero-unit">
-  <h1>ClaHub</h1>
   <%= image_tag 'logo.png', class: 'logo' %>
+  <h1>CLAHub</h1>
   <h2>Contributor License Agreements on GitHub</h2>
-  <p>Easily add a <a href="en.wikipedia.org/wiki/Contributor_License_Agreement">Contributor License Agreement</a> to your GitHub project, let contributors sign it, and see at a glance which pull requests are by CLA-signing contributors, and which aren&rsquo;t.</p>
+  <p>Easily add a <a href="http://en.wikipedia.org/wiki/Contributor_License_Agreement">Contributor License Agreement</a> to your GitHub project, let contributors sign it, and see at a glance which pull request authors have signed your CLA, and which haven&rsquo;t.</p>
   <p><a class="btn btn-primary btn-large" href="/auth/github">Sign in with GitHub to get started &raquo;</a></p>
 </div>
 
