--- a/app/views/dashboard/show.html.erb
+++ b/app/views/dashboard/show.html.erb
@@ -6,4 +6,6 @@
   <p><a class="btn btn-primary btn-large" href="/auth/github">Sign in with GitHub to get started &raquo;</a></p>
 </div>
 
-<%= render partial: 'how_it_works' %>
+<%= render partial: 'how_it_works' %> 
+
+<%= render partial: 'footer' %>
