Render agreements in Markdown when displaying them.
* Fix #9

--- a/app/views/agreements/show.html.erb
+++ b/app/views/agreements/show.html.erb
@@ -5,7 +5,7 @@
 </header>
 
 <div class="row">
-  <div id="agreement-text"><%= @agreement.text %></div>
+  <div id="agreement-text"><%== @rendered_agreement_html %></div>
 </div>
 
 <div class="row">
