--- a/app/views/agreements/new.html.erb
+++ b/app/views/agreements/new.html.erb
@@ -14,7 +14,6 @@
   </select>
 
   <%= form.label :text, "Enter your agreement text:" %>
-  <span class="help-block"></span>
 
   <ul id="agreement-editor-tabs" class="nav nav-tabs">
     <li class="active"><a class="tab-edit" href="#edit-agreement" data-toggle="tab">Edit</a></li>
@@ -24,6 +23,7 @@
   <div id="agreement-editor-content" class="tab-content">
     <div class="tab-pane active" id="edit-agreement">
       <%= form.text_area :text, placeholder: 'I, the contributor, agree to...', class: "span12", rows: 10 %>
+      <span class="help-block">(You can use <a href="http://kramdown.rubyforge.org/syntax.html">Markdown formatting</a>.)</span>
     </div>
     <div class="tab-pane" id="preview-agreement">
       <div class="preview-spinner progress progress-striped active">
