--- a/app/views/dashboard/show.html.erb
+++ b/app/views/dashboard/show.html.erb
@@ -6,4 +6,14 @@
   <p><a class="btn btn-primary btn-large" href="/auth/github">Sign in with GitHub to get started &raquo;</a></p>
 </div>
 
+<div class="row">
+  <div class="span-12">
+    <h2>What is a CLA and why do I care?</h2>
+      <p class="well">
+        A <a href="http://en.wikipedia.org/wiki/Contributor_License_Agreement">contributor license agreement</a> helps ensure that open source contributions stay open.
+        Learn more about <a href="why_cla">why people use them, when you should use one, and what it means to sign one</a>.
+      </p>
+  </div>
+</div>
+
 <%= render partial: 'how_it_works' %>
