Refactor: rename dashboard_controller to pages_controller

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -6,7 +6,7 @@ body {
   padding-bottom: 40px;
 }
 
-body.dashboard-show div.hero-unit {
+body.pages-show div.hero-unit {
   padding: 60px 60px 60px 360px;
 
   img.logo {
