--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -2,8 +2,8 @@
   <div class="navbar-inner">
     <a class="brand" href="#">CLAHub</a>
     <ul class="nav">
-      <%= nav_link_to 'Home', '/' %>
-      <%= nav_link_to 'Why CLAs?', '/why_cla' %>
+      <%= nav_link_to 'Home', page_path('home') %>
+      <%= nav_link_to 'Why CLAs?', page_path('why_cla') %>
     </ul>
   </div>
 </div>
