--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -18,13 +18,20 @@
   <%= yield %>
 
   <footer class="row">
-  <hr>
-    <p>&copy; Jason Morrison 2012</p>
-    <% if signed_in? %>
-      <section>
-      <a href="/sign_out">Sign Out</a>
-      </section>
-    <% end %>
+    <ul class="footer-links">
+      <li>&copy; Jason Morrison 2012 </li>
+      <span class="divider">&bullet;</span>
+      <li><a href="https://github.com/jasonm/clahub">Source Code and Issues</a></li>
+      <span class="divider">&bullet;</span>
+      <%= nav_link_to 'Privacy Policy', page_path('privacy') %>
+      <span class="divider">&bullet;</span>
+      <%= nav_link_to 'Terms of Service', page_path('terms') %>
+      <% if signed_in? %>
+        <span class="divider">&bullet;</span>
+        <%= nav_link_to 'Sign Out', sign_out_path %>
+      <% end %>
+    </ul>
+    </div>
   </footer>
 </div>
 
