Add all rights reserved and trademark in footer

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -19,7 +19,7 @@
 
   <footer class="row">
     <ul class="footer-links">
-      <li>&copy; Jason Morrison 2012 </li>
+      <li>&copy; Jason Morrison 2012.  All Rights Reserved.  CLAHub is a trademark of Jason Morrison.</li>
       <span class="divider">&bullet;</span>
       <li><a href="https://github.com/jasonm/clahub">Source Code and Issues</a></li>
       <span class="divider">&bullet;</span>
