Actually clean up footer by vertically breaking

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -19,8 +19,8 @@
 
   <footer class="row">
     <ul class="footer-links">
-      <li>&copy; Jason Morrison 2012.  All Rights Reserved.<br/></li>
-      <li>CLAHub is a trademark of Jason Morrison.<br/></li>
+      <li class="block">&copy; Jason Morrison 2012.  All Rights Reserved.</li>
+      <li class="block">CLAHub is a trademark of Jason Morrison.</li>
       <li><a href="https://github.com/jasonm/clahub">Source Code and Issues</a></li>
       <span class="divider">&bullet;</span>
       <%= nav_link_to 'Privacy Policy', page_path('privacy') %>
