--- a/app/views/agreements/show.html.erb
+++ b/app/views/agreements/show.html.erb
@@ -15,6 +15,15 @@
         <i class="icon-ok"></i> You have signed this CLA.
       </a>
     <% else %>
+      <label>More fields:</label>
+      <ul class="unstyled">
+        <% @agreement.enabled_agreement_fields.each do |agreement_field| %>
+          <li>
+            <%= label_tag "agreement_field_#{agreement_field.id}", agreement_field.field.label %>
+          </li>
+        <% end %>
+      </ul>
+
       <%= link_to 'I agree',
                   agreement_signature_path(
                     user_name: @agreement.user_name,
