--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -4,6 +4,10 @@
   <title>CLAHub</title>
   <%= stylesheet_link_tag "application", :media => "all" %>
   <%= csrf_meta_tags %>
+  <link rel="apple-touch-icon" href="/touch-icon/iphone.png" />
+  <link rel="apple-touch-icon" sizes="72x72" href="/touch-icon/ipad.png" />
+  <link rel="apple-touch-icon" sizes="114x114" href="/touch-icon/iphone-retina.png" />
+  <link rel="apple-touch-icon" sizes="144x144" href="/touch-icon/ipad-retina.png" />
 </head>
 <body class="<%= body_class %>">
 
