Fix navbar link from /pages/home to /

--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -2,7 +2,7 @@
   <div class="navbar-inner">
     <a class="brand" href="#">CLAHub</a>
     <ul class="nav">
-      <%= nav_link_to 'Home', page_path('home') %>
+      <%= nav_link_to 'Home', home_path %>
       <%= nav_link_to 'Why CLAs?', page_path('why_cla') %>
     </ul>
   </div>
