Update jasonm/clahub to clahub/clahub in info pages

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -25,7 +25,7 @@
     <ul class="footer-links">
       <li class="block">&copy; Jason Morrison 2012.  All Rights Reserved.</li>
       <li class="block">CLAHub is a trademark of Jason Morrison.</li>
-      <li><a href="https://github.com/jasonm/clahub">Source Code and Issues</a></li>
+      <li><a href="https://github.com/clahub/clahub">Source Code and Issues</a></li>
       <span class="divider">&bullet;</span>
       <%= nav_link_to 'Privacy Policy', page_path('privacy') %>
       <span class="divider">&bullet;</span>
