--- a/app/views/pages/terms.html.erb
+++ b/app/views/pages/terms.html.erb
@@ -16,7 +16,7 @@
 
 <p>This document is an adaptation of the <a href="http://blog.railsrumble.com/terms/">Rails Rumble Terms of Service</a> which is a derivative <a href="http://legal.heroku.com/tos">Heroku Terms of Service</a> which itself is derivative of the <a href="http://code.google.com/appengine/terms.html">Google App Engine Terms of Service</a>. The original work has been modified with permission under the <a href="http://creativecommons.org/licenses/by/3.0/">Creative Commons Attribution 3.0 License</a>. Neither Rails Rumble, Inc., nor Heroku, Inc. nor Google, Inc. is connected with, sponsors, or endorses CLAHub or its use of the work.</p>
 
-<p>You’re welcome to adapt and use this document for your own needs. If you make an improvement, we’d appreciate it if you would <a href="http://github.com/jasonm/clahub/issues">let us know</a> so we can consider improving our own document.</p>
+<p>You’re welcome to adapt and use this document for your own needs. If you make an improvement, we’d appreciate it if you would <a href="http://github.com/clahub/clahub/issues">let us know</a> so we can consider improving our own document.</p>
 
 <h3 id="your_agreement_with_us">Your Agreement with CLAHub</h3>
 
@@ -96,7 +96,7 @@
 
 <p>CLAHub gives you a personal, worldwide, royalty-free, non-assignable and non-exclusive license to use the software provided to you as part of the Service. This license is for the sole purpose of enabling you to use and enjoy the benefit of the Service, in the manner permitted by the Terms.</p>
 
-<p>The source code of www.clahub.com is provided at <a href="https://github.com/jasonm/clahub">github.com/jasonm/clahub</a> and is licensed under the <a href="https://github.com/jasonm/clahub/blob/master/LICENSE">MIT license as per the LICENSE file contained in the source code</a>.
+<p>The source code of www.clahub.com is provided at <a href="https://github.com/clahub/clahub">github.com/clahub/clahub</a> and is licensed under the <a href="https://github.com/clahub/clahub/blob/master/LICENSE">MIT license as per the LICENSE file contained in the source code</a>.
 
 <p>Open source software licenses for components of the Service released under an open source license constitute separate written agreements. To the limited extent that the open source software licenses expressly supersede these Terms, the open source licenses govern your agreement with CLAHub for the use of the components of the Service released under an open source license.</p>
 
