Fix styling for contributing guidelines

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -95,7 +95,8 @@ body.signatures-create {
   }
 
   code#contributing-markup {
-    @extend .well, .row;
+    @extend .well;
+    display: block;
   }
 }
 
