--- a/app/views/agreements/_contributing_file_link.html.erb
+++ b/app/views/agreements/_contributing_file_link.html.erb
@@ -9,6 +9,8 @@
   </p>
 </div>
 
-<code id="contributing-markup">
-  To get started, &lt;a href=&quot;<%= agreement_url(@agreement.user_name, @agreement.repo_name) %>&quot;&gt;sign the Contributor License Agreement&lt;/a&gt;.
-</code>
+<div class="row">
+  <code id="contributing-markup">
+    To get started, &lt;a href=&quot;<%= agreement_url(@agreement.user_name, @agreement.repo_name) %>&quot;&gt;sign the Contributor License Agreement&lt;/a&gt;.
+  </code>
+</div>
