Mention Google UA on privacy page

--- a/app/views/pages/privacy.html.erb
+++ b/app/views/pages/privacy.html.erb
@@ -12,6 +12,8 @@
 
 <p>That’s the basic idea, but you must read through the entire Privacy Policy below and agree with all the details before you may use any of our services. This Privacy Policy is effective immediately, meaning that every time you visit our Site or use the Services on our Site, you are accepting the practices described in this Privacy Policy.</p>
 
+<p>We use Google Universal Analytics for web analytics, which collects anonymous information about visitors.  To opt out of this and many other tracking scripts like it, we suggest tools like <a href="http://www.ghostery.com/">Ghostery</a> and <a href="https://adblockplus.org/">Adblock Plus</a>.</p>
+
 <p>This Privacy Policy may change over time. Such modifications will become effective immediately upon their posting to this page. It is your obligation to review this Privacy Policy on a regular basis to inform yourself of any changes that may have been made. Your continued use of any of our Services denotes your acceptance of any such modified terms.</p>
 
 <h2 id="the_fine_print">The Fine Print</h2>
