--- a/app/views/pages/terms.html.erb
+++ b/app/views/pages/terms.html.erb
@@ -1,6 +1,6 @@
 <h1 id="terms_of_service">Terms of Service</h1>
 
-<h4 id="last_revised">Last revised on January 27th, 2013</h4>
+<h4 id="last_revised">Last revised on January 27th, 2013 (<a href="https://github.com/clahub/clahub/commits/master/app/views/pages/terms.html.erb">see the history</a>)</h4>
 
 <h3 id="the_big_picture">The Big Picture</h3>
 
