Add information about repo visibility

--- a/app/views/agreements/new.html.erb
+++ b/app/views/agreements/new.html.erb
@@ -13,6 +13,12 @@
     <% end %>
   </select>
 
+  <a tabindex="0" href="#" rel="popover" title="Public and organization repos" data-content='CLAHub can see your public repos.  It can also see organization repos if you have <a href="https://help.github.com/articles/permission-levels-for-an-organization-repository/">admin permissions for the repo</a> and your organization role is <a href="https://help.github.com/articles/publicizing-or-concealing-organization-membership/">publicized</a>.'>Why don't I see my repos?</a>
+
+  <br>
+  <br>
+  <br>
+
   <%= form.label :text, "Enter your agreement text:" %>
 
   <ul id="agreement-editor-tabs" class="nav nav-tabs">
