Convert field information popups to bootstrap popovers

--- a/app/views/agreements/new.html.erb
+++ b/app/views/agreements/new.html.erb
@@ -49,13 +49,7 @@
           <%= f.check_box :enabled %>
           <%= f.label :enabled, f.object.field.label %>
           <% if description = f.object.field.description %>
-            <span class="expansion-container">
-              <div class="expansion-content" style="display: none;">
-                <p>When signing your agreement, the person signing will see helper text for this field:</p>
-                <blockquote><%= description %></blockquote>
-              </div>
-              <a href="#">What's this?</a>
-            </span>
+            <a tabindex="0" href="#" rel="popover" title="<% f.object.field.label %>" data-content='<p>When signing your agreement, the person signing will see helper text for this field:</p><blockquote><%= description %></blockquote>'>What's this?</a>
           <% end %>
         </li>
       <% end %>
@@ -72,9 +66,6 @@
   <script type="text/javascript">
     //<![CDATA[
       $(function() {
-        $('.expansion-container>a').click(function(e) {
-          $(e.target).closest('span.expansion-container').find('>*').toggle();
-        });
         $('select.select-chosen').chosen({ search_contains: true });
 
         (function() {
