--- a/app/views/agreements/show.html.erb
+++ b/app/views/agreements/show.html.erb
@@ -36,7 +36,7 @@
       <% end %>
     <% end %>
   <% else %>
-    <a id="sign-in-to-agree" href="/auth/github">Sign in with GitHub to agree to this CLA &raquo;</a>
+    <a id="sign-in-to-agree" href="/auth/github_limited">Sign in with GitHub to agree to this CLA &raquo;</a>
   <% end %>
 </div>
 
