--- a/app/views/agreements/_contributing_file_link.html.erb
+++ b/app/views/agreements/_contributing_file_link.html.erb
@@ -11,6 +11,6 @@
 
 <div class="row">
   <code id="contributing-markup">
-    To get started, &lt;a href=&quot;<%= agreement_url(@agreement.user_name, @agreement.repo_name) %>&quot;&gt;sign the Contributor License Agreement&lt;/a&gt;.
+    To get started, &lt;a href=&quot;<%= agreement_url(@agreement) %>&quot;&gt;sign the Contributor License Agreement&lt;/a&gt;.
   </code>
 </div>
