--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -24,8 +24,9 @@
 
   <footer class="row">
     <ul class="footer-links">
-      <li class="block">&copy; Jason Morrison 2012.  All Rights Reserved.</li>
-      <li class="block">CLAHub is a trademark of Jason Morrison.</li>
+      <li class="block">This site uses <a href="http://clahub.com" target="_blank">CLAHub</a> from Jason Morrison</li>
+      <!-- <li class="block">&copy; Jason Morrison 2012.  All Rights Reserved.</li> -->
+      <!-- <li class="block">CLAHub is a trademark of Jason Morrison.</li> -->
       <li><a href="https://github.com/clahub/clahub">Source Code and Issues</a></li>
       <span class="divider">&bullet;</span>
       <%= nav_link_to 'Privacy Policy', page_path('privacy') %>
