--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -1,8 +1,8 @@
 <div class="navbar navbar-fixed-top">
   <div class="navbar-inner">
-    <a class="brand" href="#">CLAHub</a>
+    <a class="brand" href="/">The Hybrid Group</a>
     <ul class="nav">
-      <%= nav_link_to 'Home', home_path %>
+      <%# nav_link_to 'Home', home_path %>
       <%= nav_link_to 'Why CLAs?', page_path('why_cla') %>
       <% if signed_in? %>
         <%= nav_link_to 'My agreements and signatures', agreements_path %>
