updates GithubRepos#repos to return repositories where the current_user has admin rights and belong to the hybridgroup organization. hides the call-to-action button to create new agreement, redirects to /agreements and shows notice when the user tries to get access to edit, update, new or create agreement when not complying to those requirements

--- a/app/views/agreements/index.html.erb
+++ b/app/views/agreements/index.html.erb
@@ -33,6 +33,8 @@
   <% end %>
 </div>
 
-<div class="row form-actions">
-  <p><%= link_to "Create a new agreement", new_agreement_path, class: 'btn btn-primary' %></p>
-</div>
+<% if @member_of_hybridgroup %>
+  <div class="row form-actions">
+    <p><%= link_to "Create a new agreement", new_agreement_path, class: 'btn btn-primary' %></p>
+  </div>
+<% end %>
