--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -27,13 +27,14 @@
       <li class="block">This site uses <a href="http://clahub.com" target="_blank">CLAHub</a> from Jason Morrison</li>
       <!-- <li class="block">&copy; Jason Morrison 2012.  All Rights Reserved.</li> -->
       <!-- <li class="block">CLAHub is a trademark of Jason Morrison.</li> -->
-      <li><a href="https://github.com/clahub/clahub">Source Code and Issues</a></li>
+<!--       <li><a href="https://github.com/clahub/clahub">Source Code and Issues</a></li>
       <span class="divider">&bullet;</span>
       <%= nav_link_to 'Privacy Policy', page_path('privacy') %>
       <span class="divider">&bullet;</span>
       <%= nav_link_to 'Terms of Service', page_path('terms') %>
+-->
       <% if signed_in? %>
-        <span class="divider">&bullet;</span>
+        <!-- <span class="divider">&bullet;</span> -->
         <%= nav_link_to 'Sign Out', sign_out_path %>
       <% end %>
     </ul>
